--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 				
 				<div class="info">
 					<h2 >ИНФРАСТРУКТУРА</h2>
-					<p>Варна би спечелила много от инфраструктурни проекти като трамвайна линия, която да замени най-натоварените автобусни линии, тъй като предоставя по-екологично решение за превоз на голямо количество хора. Трамваите консумират по-малко електроенергия от електрическите автобуси и тяхната инфраструктура е по-лесна за поддръжка. Техният въглероден отпечатък също може да бъде напълно покрит от възобновяеми енергийни източници.
-Железопътна линия между Варна и Бургас също би била от полза за града, тъй като ще увеличи притока на туристи от съседните курортни градове и по този начин ще увеличи печалбите от туризъм.</p>
+					<p>Японската компания Hitachi Rail предлага захранвана с батерии трoлейбусна технология, чието основно предимство е, че не изисква електрифицирана инфраструктура. Тролейбуси могат да работят по участъци от маршрути без въздушни кабели, използвайки най-ново поколение литиево-йонни батерии, както и специален DC/DC преобразувател за осигуряване на контролирано зареждане на батерията. Новата технология се основава на бордова система за съхранение на енергия, която може да се инсталира директно на покрива на съществуващи тролейбуси - спестявайки разходи, като същевременно се гарантира по-добра екологична ефективност за по-устойчиво бъдеще. Захранването се връща към батериите, когато тролейбуса спира, намалявайки общото количество консумирана енергия. Тази технология вече се прилага в някои градове по света и обещава едно по-чисто бъдеще за градския транспорт.<br>
+Железопътна линия през планината между Варна и Бургас също би била от полза за града, тъй като ще увеличи притока на туристи от съседните курортни градове и по този начин ще увеличи печалбите от туризъм.</p>
 				</div>
 				<div class="image">
-					<img src="assets/img/tramvaj.jpg">
+					<img src="assets/img/tramvai.jpg">
 				</div>
 				<hr class="line"></hr>
 				
@@ -153,38 +153,6 @@
 					<img src="assets/img/top5grada.png">
 				</div>
 				<hr class="line"></hr>
-			</div>
-
-			<div class="container">
-				<h2 class="menu-heading" id="menu">ИЗГОТВИЛИ</h2>
-				<hr class="line"></hr>
-				<div class="menu">
-					<div class="menu-item">
-						<img src="assets/img/profile.png">
-						<h3>Ивайло<br>Ларионов</h3>
-						<!-- <a href="#" class="red-btn">Преглед</a> -->
-					</div>
-					<div class="menu-item">
-						<img src="assets/img/profile.png">
-						<h3>Мариян<br>Бозуров</h3>
-						<!-- <a href="#" class="red-btn">Преглед</a> -->
-					</div>
-					<div class="menu-item">
-						<img src="assets/img/profile.png">
-						<h3>Лъчезар<br>Димитров</h3>
-						<!-- <a href="#" class="red-btn">Преглед</a> -->
-					</div><br>
-					<div class="menu-item">
-						<img src="assets/img/profile.png">
-						<h3>Елеонора<br>Георгиева</h3>
-						<!-- <a href="#" class="red-btn">Преглед</a> -->
-					</div>
-					<div class="menu-item">
-						<img src="assets/img/profile.png">
-						<h3>Пламена<br>Неделчева</h3>
-						<!-- <a href="#" class="red-btn">Преглед</a> -->
-					</div>
-				</div>
 			</div>
 			<footer>
 				<img src="assets/img/wave3.png" class="wave">
