--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
 				<div class="karti">
-					<img src="assets/img/srednaBrutna.png">
+					<img src="assets/img/kartaBrutna.png">
 				</div>
 				<div class="karti">
 					<img src="assets/img/top5grada.png">
