--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
 				<div class="karti">
 					<img src="assets/img/kartaBrutna.png">
 				</div>
+
+			<div class="container" id="kriterii">
+				<div class="info">
+					<h2 >Критерии</h2>
+					<p>1. Висше образование:<br>
+						На територията на града има 8 висши училища;<br>
+						2. Заетост:<br>
+						Варна се характеризира с ниска безработица и високи заплати;<br>
+						3. Култура и развлечение:<br>
+						Има множество паркове, градини, музеи, галерии и плажове;</p>
+				</div>
+				<div class="image">
+					<img src="assets/img/kriterii.png">
+				</div>
+				
+			</div>
 				<hr class="line"></hr>
 			</div>
 			<div class="container" id="parkove">
@@ -103,6 +119,7 @@
 				<div class="image">
 					<img src="assets/img/morska_gradina.jpeg">
 				</div>
+				
 				<div class="info">
 					<h2 >ПАРКОВЕ</h2>
 					<p>Всички сме забелязали усиленото строителство, осъществяващо се във града. Мигваш за секунда и вече се строят 5 нови блока. Но въпреки това Варна не забравя за важността на връзката с природата. Доказателство за това са множеството паркове, разпростиращи се на територията на му. По-големи такива са Морската градина и Евксиноград, съчетаващи богата растителност с прекрасни изгледи към морето, създавайки перфектната комбинация за една релаксираща разходка. Голяма част от парковите зони в града са обогатени със скулптури, допълващи усещането за спокойствие и единство с природата. Друга положителна черта на парковете във Варна, е че те често са домакини на културни фестивали, концерти и спортни събития, приканвайки хората да излязат от виртуалния свят и да се порадват на живия живот. Варна активно развива зелена инфраструктура, което подчертава ангажимента на града към устойчивото развитие и опазване на природните ресурси. Тези паркове представляват не само пространство за отдих, но и частичка от историята ни и помагат за поддържането на връзка с природата.</p>
