--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
 				<div class="karti">
 					<img src="assets/img/kartaBrutna.png">
 				</div>
-
-			<div class="container" id="kriterii">
+				<hr class="line"></hr>
+				<hr class="line"></hr>
+			<div class="container">
 				<div class="info">
 					<h2 >Критерии</h2>
-					<p>1. Висше образование:<br>
+					<p class="kriterii">1. Висше образование:<br>
 						На територията на града има 8 висши училища;<br>
 						2. Заетост:<br>
 						Варна се характеризира с ниска безработица и високи заплати;<br>
